welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:7: error: ')' expected but 'if' found.
	if ((Math.abs(10-a))>(Math.abs(10-b)))
        ^